update post 6 about docker extra commands

--- a/_posts/2022-02-23-blog-post-6.md
+++ b/_posts/2022-02-23-blog-post-6.md
@@ -13,7 +13,7 @@ Finalmente voltando aos posts... \o/
 Hoje vou mostrar alguns comandinhos que uso no dia a dia para gerenciar 
 os containers Docker. Espero que ajude de alguma forma. 😃
 
-Neste [link](https://www.docker.com/sites/default/files/d8/2019-09/docker-cheat-sheet.pdf) você pode encontrar alguns comandos básicos além dos quais serão mostrados aqui. Valeus! :D
+Neste [link](https://www.docker.com/sites/default/files/d8/2019-09/docker-cheat-sheet.pdf) você pode encontrar comandos básicos além dos quais serão mostrados aqui. Valeus! :D
 
 ## Verificar processos em execução
 ```bash
